--- a/server/public/views/add.html
+++ b/server/public/views/add.html
@@ -1,7 +1,7 @@
 <h2>Add an employee</h2>
 <input type="text" ng-model="ac.newEmployee.name" placeholder="Employee Name">
-<input type="number" ng-model="ac.newEmployee.id" placeholder="Employee ID">
+<input type="number" ng-model="ac.newEmployee.employeeID" placeholder="Employee ID">
 <input type="number" ng-model="ac.newEmployee.salary" placeholder="Employee Salary">
-<input type="text" ng-model="ac.newEmployee.title" placeholder="Employee Title">
-<input type="date" ng-model="ac.newEmployee.hiredate" placeholder="Employee Hire Date">
+<input type="text" ng-model="ac.newEmployee.jobTitle" placeholder="Employee Title">
+<input type="date" ng-model="ac.newEmployee.dateHired" placeholder="Employee Hire Date">
 <button ng-click="ac.addEmployee(ac.newEmployee)">Add Employee</button>
