--- a/server/public/views/track.html
+++ b/server/public/views/track.html
@@ -15,6 +15,8 @@
             <td> {{employee.jobTitle}} </td>
             <td> {{employee.salary}} </td>
             <td> {{employee.dateHired}} </td>
+            <td> <button ng-click="tc.deleteEmployee(employee)">Terminate</button> </td>
+
         </tr>
     </thead>
 </table>
